force-app/main/default/objects/Api_Credentials__mdt/Api_Credentials__mdt.object-meta.xml
<CustomObject>
    <label>Api Credential</label>
    <pluralLabel>Api Credential</pluralLabel>
</CustomObject>