force-app/main/default/objects/Api_Credentials__mdt/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client Id (key)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>