force-app/main/default/objects/Api_Credentials__mdt/fields/Clinet_Secret__c.field-meta.xml
<CustomField>
    <fullName>Clinet_Secret__c</fullName>
    <label>Clinet Secret</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>