force-app/main/default/objects/Api_Credentials__mdt/fields/version__c.field-meta.xml
<CustomField>
    <fullName>version__c</fullName>
    <label>version</label>
    <length>5</length>
    <type>Text</type>
</CustomField>